from gameMode import GameMode

class PingGame(GameMode):
    """
    Game mode of PING.
    """
    def run():
        pass

    def stop():
        pass